--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,14 @@ html, body { font-size: 14px; height: 100%; margin: 0; padding: 0; }
 		font-size: 1.5rem;
 	}
 
+	h4 {
+		font-size: 1.2em;
+	}
+
+	body {
+		font-size: 1.1em;
+	}
+
 
 }
 
