--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ html, body { font-size: 14px; height: 100%; margin: 0; padding: 0; }
 .new-note-textarea { resize: none; width:100%;}
 .white-back { padding: 10px; background-color: white;}
 
-@media(max-width: 767px) {
+@media (max-width: 767px) { 
 	html {
-		font-size: 24px;
+		font-size: 28px;
 	}
 
 	.modal-title {
@@ -36,8 +36,28 @@ html, body { font-size: 14px; height: 100%; margin: 0; padding: 0; }
 		font-size: 1.0rem;
 	}
 }
+@media (min-width: 768px) and (max-width: 991px) { 
+	html {
+		font-size: 18px;
+	}
 
-@media(min-width: 768px) {
+	.modal-title {
+		font-size: 1.5rem;
+	}
+
+	h4 {
+		font-size: 1.2rem;
+	}
+
+	body {
+		font-size: 1em;
+	}
+
+	.gm-style .gm-style-iw {
+		font-size: 1.0rem;
+	}
+}
+@media (min-width: 992px) { 
 	html {
 		font-size: 14px;
 	}
@@ -51,13 +71,11 @@ html, body { font-size: 14px; height: 100%; margin: 0; padding: 0; }
 	}
 
 	body {
-		font-size: 1.0em;
+		font-size: 1em;
 	}
 
 	.gm-style .gm-style-iw {
 		font-size: 1.0rem;
 	}
 
-
 }
-
