--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,14 @@ html, body { font-size: 14px; height: 100%; margin: 0; padding: 0; }
 .inline { display: inline; }
 .no-margin { margin: 0;}
 #side-panel-header { text-align: center; background-color: white; padding: 10px; border-radius: 10px; border: 2px solid lightblue; }
-.loading-div { background:url(img/ajax-loader.gif) no-repeat center center; width: 100%; height: 100px; }
+.loading-div { background:url(../img/ajax-loader.gif) no-repeat center center; width: 100%; height: 100px; }
 .note-date { font-size: 10px;}
 .new-note-textarea { resize: none; width:100%;}
 .white-back { padding: 10px; background-color: white;}
 
 @media (max-width: 767px) { 
 	html {
-		font-size: 28px;
+		font-size: 24px;
 	}
 
 	.modal-title {
