--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,170 @@
-html, body { font-size: 14px; height: 100%; margin: 0; padding: 0; }
-#close-panel-btn {margin: 5px; background-color: white; padding: 2px; border-radius: 15px; border: 2px solid black;}
-#navigation-bar { margin: 0; z-index: 1; }
-#map { height: 100%; margin-left: 0px;}
-#map-container { position:absolute; top: 0; bottom:0; right: 0px; padding: 0; }
-#side-panel { display:none; position:absolute; top: 0; bottom: 0; overflow-y: scroll;}
-#side-panel-open-btn { background:url(img/triangle-left.png) no-repeat center center; background-color: #FBFBFB; position:absolute; top: 0; right: 0; bottom: 0; width: 20px; }
-#main { position: fixed; top: 55px; bottom: 0px; width: 100%; }
-#id { margin: 5px; background-color: white; padding: 2px; border-radius: 15px; border: 2px solid black; }
-.inline { display: inline; }
-.no-margin { margin: 0;}
-#side-panel-header { text-align: center; background-color: white; padding: 10px; border-radius: 10px; border: 2px solid lightblue; }
-.loading-div { background:url(../img/ajax-loader.gif) no-repeat center center; width: 100%; height: 100px; }
-.note-date { font-size: 10px;}
-.new-note-textarea { resize: none; width:100%;}
-.white-back { padding: 10px; background-color: white;}
-
-@media (max-width: 767px) { 
-	html {
-		font-size: 24px;
-	}
-
-	.modal-title {
-		font-size: 1.5rem;
-	}
-
-	h4 {
-		font-size: 1.2rem;
-	}
-
-	body {
-		font-size: 1em;
-	}
-
-	.gm-style .gm-style-iw {
-		font-size: 1.0rem;
-	}
+html, body {
+    font-size: 14px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
-@media (min-width: 768px) and (max-width: 991px) { 
-	html {
-		font-size: 18px;
-	}
 
-	.modal-title {
-		font-size: 1.5rem;
-	}
-
-	h4 {
-		font-size: 1.2rem;
-	}
-
-	body {
-		font-size: 1em;
-	}
-
-	.gm-style .gm-style-iw {
-		font-size: 1.0rem;
-	}
+#close-panel-btn {
+    margin: 5px;
+    background-color: white;
+    padding: 2px;
+    border-radius: 15px;
+    border: 2px solid black;
 }
-@media (min-width: 992px) { 
-	html {
-		font-size: 14px;
-	}
 
-	.modal-title {
-		font-size: 1.5rem;
-	}
+#navigation-bar {
+    margin: 0;
+    z-index: 1;
+}
 
-	h4 {
-		font-size: 1.2rem;
-	}
+#map {
+    height: 100%;
+    margin-left: 0px;
+}
 
-	body {
-		font-size: 1em;
-	}
+#map-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0px;
+    padding: 0;
+}
 
-	.gm-style .gm-style-iw {
-		font-size: 1.0rem;
-	}
+#side-panel {
+    display: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    overflow-y: scroll;
+}
 
+#side-panel-open-btn {
+    background: url(img/triangle-left.png) no-repeat center center;
+    background-color: #FBFBFB;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 20px;
+}
+
+#main {
+    position: fixed;
+    top: 55px;
+    bottom: 0px;
+    width: 100%;
+}
+
+#id {
+    margin: 5px;
+    background-color: white;
+    padding: 2px;
+    border-radius: 15px;
+    border: 2px solid black;
+}
+
+.inline {
+    display: inline;
+}
+
+.no-margin {
+    margin: 0;
+}
+
+#side-panel-header {
+    text-align: center;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid lightblue;
+}
+
+.loading-div {
+    background: url(../img/ajax-loader.gif) no-repeat center center;
+    width: 100%;
+    height: 100px;
+}
+
+.note-date {
+    font-size: 10px;
+}
+
+.new-note-textarea {
+    resize: none;
+    width: 100%;
+}
+
+.white-back {
+    padding: 10px;
+    background-color: white;
+}
+
+@media (max-width: 767px) {
+ 
+    html {
+        font-size: 20px;
+    }
+
+    .modal-title {
+        font-size: 1.5rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+
+    body {
+        font-size: 1em;
+    }
+
+    .gm-style .gm-style-iw {
+        font-size: 1.0rem;
+    };
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+ 
+    html {
+        font-size: 18px;
+    }
+
+    .modal-title {
+        font-size: 1.5rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+
+    body {
+        font-size: 1em;
+    }
+
+    .gm-style .gm-style-iw {
+        font-size: 1.0rem;
+    };
+}
+
+@media (min-width: 992px) {
+ 
+    html {
+        font-size: 14px;
+    }
+
+    .modal-title {
+        font-size: 1.5rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+
+    body {
+        font-size: 1em;
+    }
+
+    .gm-style .gm-style-iw {
+        font-size: 1.0rem;
+    };
 }
